Fix removed invisible icons form accordion header Fixes #16

--- a/css/door.css
+++ b/css/door.css
@@ -4,17 +4,17 @@
 }
 
 body {
-    display         : flex;
-    align-items     : center;
-    justify-content : center;
-    font-family     : Georgia, 'Times New Roman', Times, serif;
-    font-size       : 1vw;
-    text-align      : center;
-    align-content   : center;
-    overflow        : visible;
+    display        : flex;
+    align-items    : center;
+    justify-content: center;
+    font-family    : Georgia, 'Times New Roman', Times, serif;
+    font-size      : 1vw;
+    text-align     : center;
+    align-content  : center;
+    overflow       : visible;
 }
 
-svg{
+svg {
     overflow: visible;
 }
 
@@ -32,8 +32,8 @@ a {
     position     : relative;
     display      : inline-block;
     border-bottom: 1px dotted black;
-    margin: 0;
-    cursor: pointer;
+    margin       : 0;
+    cursor       : pointer;
 }
 
 .tooltip .tooltiptext {
@@ -55,26 +55,26 @@ a {
     visibility: visible;
 }
 
-#video-player-div{
+#video-player-div {
     z-index: 2;
 }
 
-video{
-    position:absolute;
-    height: 90VH;
-    right: 0;
-    top: 5%;
+video {
+    position : absolute;
+    height   : 90VH;
+    right    : 0;
+    top      : 5%;
     max-width: 50%;
 }
 
-iframe{
-    position: absolute;
-    border: transparent;
+iframe {
+    position     : absolute;
+    border       : transparent;
     border-radius: 50%;
-    height: 70VH;
-    width: 70VH;
-    right: 8%;
-    top: 15%;
+    height       : 70VH;
+    width        : 70VH;
+    right        : 8%;
+    top          : 15%;
 
 }
 
@@ -87,11 +87,11 @@ iframe{
 }
 
 #svgContainer {
-    position : fixed;
-    top      : 0;
-    left     : 0;
-    width    : 100%;
-    height   : 100%;
+    position: fixed;
+    top     : 0;
+    left    : 0;
+    width   : 100%;
+    height  : 100%;
 }
 
 #border {
@@ -111,9 +111,17 @@ iframe{
 
 .ui-accordion .ui-accordion-header {
     background-color: rgba(246, 246, 246, 0.5);
+    margin          : 0;
 }
 
-.accordion::after{
+.ui-accordion-header::before,
+.ui-accordion-header-icon {
+    display   : none !important;
+    content   : none !important;
+    background: none !important;
+}
+
+.accordion::after {
     filter              : url(#filterContrastText);
     opacity             : 1;
     display             : block;
@@ -139,7 +147,7 @@ iframe{
 #accordionLeft {
     position: fixed;
     top     : 50%;
-    left: 3%;
+    left    : 3%;
 }
 
 .accordion .ui-accordion-content {
@@ -154,6 +162,7 @@ iframe{
     background-color: var(--teal);
     opacity         : 0.2;
 }
+
 
 /* end of accordions */
 
